--- a/os/centos-7/ansible/bootstrap.yml
+++ b/os/centos-7/ansible/bootstrap.yml
@@ -4,12 +4,12 @@
 
   tasks:
 
-    - name: add epel repository
-      yum: name=epel-release state=present
-      register: epel_install
-      
-    - name: Debug details for epel
-      debug: var=epel_install
+#    - name: add epel repository
+#      yum: name=epel-release state=present
+#      register: epel_install
+#      
+#    - name: Debug details for epel
+#      debug: var=epel_install
 
 
     - name: haveged installed
